<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="button_01">1</string>
    <string name="button_02">2</string>
    <string name="button_03">3</string>
    <string name="button_plus">+</string>
    <string name="button_04">4</string>
    <string name="button_05">5</string>
    <string name="button_6">6</string>
    <string name="button_minus">-</string>
    <string name="button_07">7</string>
    <string name="button_08">8</string>
    <string name="button_09">9</string>
    <string name="button_divide">/</string>
    <string name="button_c">C</string>
    <string name="button_00">0</string>
    <string name="button_dot">.</string>
    <string name="button_mulitply">*</string>
    <string name="button_equal">=</string>
</resources>
