<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="uottawa.simplecalculator.MainActivity">


        <EditText
            android:id="@+id/resultEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="0" />

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/resultEdit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/ButtonsLayout01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn01"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/button_01"
                android:onClick="btn01CLick"/>

            <Button
                android:id="@+id/btn02"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/button_02"
                android:onClick="btn02CLick"/>

            <Button
                android:id="@+id/btn03"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/button_03"
                android:onClick="btn03CLick"/>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/button_plus"
                android:onClick="btnAddCLick"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn04"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/button_04"
                android:onClick="btn04CLick"/>

            <Button
                android:id="@+id/btn05"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/button_05"
                android:onClick="btn05CLick"/>

            <Button
                android:id="@+id/btn06"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/button_6"
                android:onClick="btn06CLick"/>

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/button_minus"
                android:onClick="btnMinusCLick"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn07"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:onClick="btn07CLick"
                android:text="@string/button_07" />

            <Button
                android:id="@+id/btn08"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:onClick="btn08CLick"
                android:text="@string/button_08" />

            <Button
                android:id="@+id/btn09"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:onClick="btn09CLick"
                android:text="@string/button_09" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/button_divide"
                android:onClick="btnDivideCLick"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/button_c"
                android:onClick="btnClearCLick"/>

            <Button
                android:id="@+id/btn00"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/button_00"
                android:onClick="btn00CLick"/>

            <Button
                android:id="@+id/btnDot"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/button_dot"
                android:onClick="btnDotCLick"/>

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/button_mulitply"
                android:onClick="btnMultiplyCLick"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnResult"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/mainlayout"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/button_equal"
            android:onClick="btnResultCLick"/>
    </LinearLayout>


</RelativeLayout>
